# setuptools-demo

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
