[metadata]
name=package
version=file: VERSION
author=author
author_email=nobody@domain
description=description
long_description=file: README.md
long_description_content_type=text/markdown

[options]
include_package_data=True
packages=find:
package_dir=
	=src
python_requires=>=3.9

[options.packages.find]
where=src

[options.extras_require]
dev=
	build

[options.package_data]
*=
	py.typed